--- a/app/templates/project_stocks2.html
+++ b/app/templates/project_stocks2.html
@@ -7,24 +7,23 @@
 {% block page_content %}
 <div class="btn-toolbar mb-3" role="toolbar" aria-label="Stock management toolbar">
 <div class="btn-group mr-2" role="group" aria-label="Add stocks and plans">
-    <button class="btn btn-outline-primary" data-toggle="modal" data-target="#DirectStocksModal">Add Direct Stocks</button>
+    <div class="btn-group" role="group">
+        <button class="btn btn-outline-primary dropdown-toggle" data-toggle="dropdown">Add Direct Stocks</button>
+        <div class="dropdown-menu">
+            <a class="dropdown-item" data-toggle="modal" data-target="#DirectStocksModal">Input</a>
+            <a class="dropdown-item" data-toggle="modal" data-target="#DirectStocksImportModal">Import from TSV</a>
+        </div>
+    </div>
     <div class="btn-group" role="group">
         <button class="btn btn-outline-primary dropdown-toggle" data-toggle="dropdown">Add RSU plan</button>
         <div class="dropdown-menu">
-            <a class="dropdown-item" data-toggle="modal" data-target="#RsuPlanModal">Input</a>
             <a class="dropdown-item" data-toggle="modal" data-target="#RsuImportModal">Import from TSV</a>
         </div>
     </div>
-    <button class="btn btn-outline-primary" data-toggle="modal" data-target="#StockOptionsModal">Add Stock Option plan</button>
-</div>
-<div class="btn-group mr-2" role="group" aria-label="Sell stocks">
-    <div class="dropdown">
-        <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownSellingButton" data-toggle="dropdown">
-            Declare a selling event
-        </button>
+    <div class="btn-group" role="group">
+        <button class="btn btn-outline-primary dropdown-toggle" data-toggle="dropdown">Add Stock Option plan</button>
         <div class="dropdown-menu">
-            <a class="dropdown-item" data-toggle="modal" data-target="#SellingStockModal">Sell direct stocks</a>
-            <a class="dropdown-item" data-toggle="modal" data-target="#SellingRsuModal">Sell RSUs</a>
+            <a class="dropdown-item" data-toggle="modal" data-target="#StockOptionsImportModal">Import from TSV</a>
         </div>
     </div>
 </div>
@@ -51,7 +50,11 @@
     <div class="card">
         <div class="card-header">
             RSUs
-            <a class="btn btn-success btn-sm float-right" href="">Sell</a>
+            {% if symbol in rsu_sales %}
+            -  <a id="rsusales_tooltip" data-toggle="tooltip" title="{{rsu_sales_html[symbol]}}"> <small class="text-danger">{{rsu_sales[symbol] | length}} sales </small></a>
+                <script>$('#rsusales_tooltip').tooltip({ html: true })</script>
+            {% endif %}
+            <a class="btn btn-success btn-sm float-right" data-toggle="modal" data-target="#SellingModal" data-stocktype="RSU" data-symbol="{{symbol}}">Sell</a>
         </div>
         <div class="card-body" id="accordion_rsu_{{symbol}}">
             {% for plan_name, (rsu_plan_id, tax_scheme, vestings) in rsu_plans[symbol].items() %}
@@ -150,12 +153,12 @@
     </div>
 </div>
 
-<div class="modal" id="RsuPlanModal" role="dialog" aria-hidden="true">
+<div class="modal" id="DirectStocksImportModal" role="dialog" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-header">RSU Plan</div>
+            <div class="modal-header">Direct stocks Import</div>
             <div class="modal-body">
-                    {{ wtf.render_form(rsuplan_form, action=url_for(".add_rsu_plan", project_id=project.id)) }}
+                    {{ wtf.render_form(directstocks_import_form, action=url_for(".import_dstocks", project_id=project.id)) }}
             </div>
         </div>
     </div>
@@ -172,43 +175,35 @@
     </div>
 </div>
 
-<div class="modal" id="RsuVestingModal" role="dialog" aria-hidden="true">
+
+<div class="modal" id="StockOptionsImportModal" role="dialog" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-header">RSU Plan</div>
+            <div class="modal-header">Stock Options Import</div>
             <div class="modal-body">
-                    {{ wtf.render_form(rsuvesting_form, action=url_for(".add_rsu_vesting", project_id=project.id)) }}
+                    {{ wtf.render_form(stockoptions_import_form, action=url_for(".import_stockoptions", project_id=project.id)) }}
             </div>
         </div>
     </div>
 </div>
 
-<div class="modal" id="SellingStockModal" role="dialog" aria-hidden="true">
+<div class="modal" id="SellingModal" role="dialog" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">Selling direct stocks</div>
             <div class="modal-body">
-                    {{ wtf.render_form(dstock_sale_form, action=url_for(".add_dstocks_sale", project_id=project.id)) }}
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="modal" id="SellingRsuModal" role="dialog" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">Selling RSUs</div>
-            <div class="modal-body">
-                    {{ wtf.render_form(rsu_sale_form, action=url_for(".add_rsu_sale", project_id=project.id)) }}
+                    {{ wtf.render_form(sale_form, action=url_for(".sell_stocks", project_id=project.id)) }}
             </div>
         </div>
     </div>
 </div>
 
 <script>
-$('#RsuVestingModal').on('show.bs.modal', function (event) {
-  let planId = $(event.relatedTarget).data('rsuplan')
-  $(this).find('.modal-body #rsuplan_id').val(planId)
+$('#SellingModal').on('show.bs.modal', function (event) {
+  let stockType = $(event.relatedTarget).data('stocktype')
+  $(this).find('.modal-body #stock_type').val(stockType)
+  let symbol = $(event.relatedTarget).data('symbol')
+  $(this).find('.modal-body #symbol').val(symbol)
 })
 </script>
 
